samples/_failures_safe/1761005324_3016ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da7b8713.c: In function ‘main’:
./samples/SAFE/__tmp_da7b8713.c:168:15: error: expected ‘;’ at end of input
  168 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_da7b8713.c:168:9: error: expected declaration or statement at end of input
  168 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_da7b8713.c:168:9: error: expected declaration or statement at end of input
